Fix : contact form - adjust gap between buttons

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -33,7 +33,7 @@
 .button {
   max-width: 960px;
   padding: 35px;
-  gap: 8px;
+  gap: 18px;
 }
 p {
   text-align: right;
